better expression -- line 32
Co-Authored-By: Aissaoui Ahmed <Aissaoui-Ahmed@users.noreply.github.com>

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -29,7 +29,7 @@
 </div>
 
 <div id="special-sponsor">
-  <h3>كفيلنا المميز</h3>
+  <h3>المُمَوّل المميز</h3>
   <% var specialSponsor = theme.special_sponsors[0]; %>
   <a href="<%- specialSponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${specialSponsor.img}`) %>" style="width:160px" alt="Code.xyz Logo">
