typo --fix --line 100
Co-Authored-By: Aissaoui Ahmed <Aissaoui-Ahmed@users.noreply.github.com>

--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -97,7 +97,7 @@
       >
     </form>
     <p>
-      يمكنك قراءة الإصدارات السابقة والاستماع إلى البودكاست الخاص بنا على <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a>.
+      يمكنك قراءة القضايا السابقة والاستماع إلى البودكاست الخاص بنا على <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a>.
     </p>
   </div>
 </div>
