fix sponsor mot --fix --line 17
Co-Authored-By: Aissaoui Ahmed <Aissaoui-Ahmed@users.noreply.github.com>

--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -14,7 +14,7 @@
 <%_ } _%>
 <br>
 
-<a class="become-sponsor button white" href="<%- url_for("/support-vuejs/") %>">   كن كفيل!   </a>
+<a class="become-sponsor button white" href="<%- url_for("/support-vuejs/") %>">كن من مُمَوّلين!</a>
 
 <div class="open-collective-sponsors">
   <h3>الكفلاء المنفتحون</h3>
