fix sponsore translate --- line
Co-Authored-By: Aissaoui Ahmed <Aissaoui-Ahmed@users.noreply.github.com>

--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -1,4 +1,4 @@
-<h3>كفيل باتريون (Patreon)</h3>
+<h3>مُمَوّل باتريون (Patreon)</h3>
 
 <%_ for (const sponsor of theme.platinum_sponsors) {_%>
 <a href="<%- sponsor.url %>" target="_blank" style="width: 160px;">
