fix libe 20 --index
Co-Authored-By: Aissaoui Ahmed <Aissaoui-Ahmed@users.noreply.github.com>

--- a/themes/vue/layout/partials/sponsors.ejs
+++ b/themes/vue/layout/partials/sponsors.ejs
@@ -17,7 +17,7 @@
 <a class="become-sponsor button white" href="<%- url_for("/support-vuejs/") %>">كن من مُمَوّلين!</a>
 
 <div class="open-collective-sponsors">
-  <h3>الكفلاء المنفتحون</h3>
+  <h3>OpenCollective المُمَوّلون في </h3>
   <h4>بلاتين</h4>
   <%_ for (let i = 0; i < 2; i++) {_%>
   <a href="https://opencollective.com/vuejs/tiers/platinum-sponsors/<%- i %>/website" target="_blank">
