--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -35,7 +35,7 @@
     <img src="<%- url_for(`/images/${specialSponsor.img}`) %>" style="width:160px" alt="Code.xyz Logo">
     <br>
     <!-- <%- specialSponsor.description %> -->
-    <span>بناء واجهات برمجة التطبيقات التي تحتاجها في دقائق بدلا من أيام ، مجانا.</span>
+    <span>قم ببناء واجهة لبرمجة التطبيقات في دقائق، مجانا</span>
   </a>
 </div>
 
@@ -48,14 +48,14 @@
 
     <div class="point">
       <h2>متعدد الاستعمالات</h2>
-      <p>نظام شامل يخول لك الإستعمال سواء كمكتبة او كإطار عمل متكامل.</p>
+      <p>يخول لك استعماله كمكتبة أو إطار عمل متكامل</p>
     </div>
 
     <div class="point">
-      <h2>ذو أداء عالي</h2>
+      <h2>عالي الأداء</h2>
       <p>
-        الحجم في وقت التنفيذ 20 كيلوبايت<br>
-        نظام Virtual DOM سريع جدا<br>
+        الحجم وقت التنفيذ 20 كيلوبايت<br>
+        نظام Virtual DOM فائق السرعة<br>
         الحد الأدنى من الجهد الأمثل
       </p>
     </div>
@@ -97,7 +97,7 @@
       >
     </form>
     <p>
-      يمكنك قراءة القضايا السابقة والاستماع إلى البودكاست الخاص بنا على <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a>.
+      يمكنك قراءة العلل السابقة والاستماع إلى البودكاست الخاص بنا على <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a>.
     </p>
   </div>
 </div>
