--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -19,7 +19,7 @@
         <a id="modal-player" class="button has-icon" href="javascript:;">
           <%- partial('icons/play') %>
           لماذا VUE.JS ؟</a>
-        <a class="button white" href="<%- url_for("/v2/guide/") %>">إبدأ</a>
+        <a class="button white" href="<%- url_for("/v2/guide/") %>">ابدأ</a>
         <a class="button gray has-icon" href="https://github.com/vuejs/vue" target="_blank">
           <%- partial('icons/github-dark') %>
           GITHUB</a>
@@ -43,7 +43,7 @@
   <div class="inner">
     <div class="point">
       <h2>إعتيادي</h2>
-      <p>هل تعرف بالفعل HTML و CSS و JavaScript؟ إقرأ الدليل وإبدء في بناء مشاريعك في أي وقت من الأوقات!</p>
+      <p>هل تعرف بالفعل HTML وCSS وJavaScript؟ اقرأ الدليل وابدأ في بناء مشاريعك في أي وقت من الأوقات!</p>
     </div>
 
     <div class="point">
@@ -70,7 +70,7 @@
 
 <div id="news">
   <div class="inner">
-    <h3><label for="member_email">إشترك في نشرتنا الإخبارية الأسبوعية</label></h3>
+    <h3><label for="member_email">اشترك في نشرتنا الإخبارية الأسبوعية</label></h3>
     <form
       class="newsletter-form"
       id="revue-form"
