--- a/themes/vue/layout/layout.ejs
+++ b/themes/vue/layout/layout.ejs
@@ -15,7 +15,8 @@
     <link rel="alternate" hreflang="ko" href="https://kr.vuejs.org/<%- page.path %>">
     <link rel="alternate" hreflang="pt-BR" href="https://br.vuejs.org/<%- page.path %>">
     <link rel="alternate" hreflang="fr" href="https://fr.vuejs.org/<%- page.path %>">
-
+    <link rel="alternate" hreflang="ar" href="https://ar.vuejs.org/<%- page.path %>">
+    
     <meta property="og:type" content="article">
     <meta property="og:title" content="<%- page.title ? page.title + ' — ' : '' %>Vue.js">
     <meta property="og:description" content="<%- theme.site_description %>">
