New language translations

--- a/themes/vue/layout/layout.ejs
+++ b/themes/vue/layout/layout.ejs
@@ -1,7 +1,7 @@
 <% var isIndex = page.path === 'index.html' %>
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" direction="rtl">
   <head>
     <title><%- page.title ? page.title + ' — ' : '' %>Vue.js</title>
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
     <link rel="alternate" hreflang="pt-BR" href="https://br.vuejs.org/<%- page.path %>">
     <link rel="alternate" hreflang="fr" href="https://fr.vuejs.org/<%- page.path %>">
     <link rel="alternate" hreflang="ar" href="https://ar.vuejs.org/<%- page.path %>">
-    
+
     <meta property="og:type" content="article">
     <meta property="og:title" content="<%- page.title ? page.title + ' — ' : '' %>Vue.js">
     <meta property="og:description" content="<%- theme.site_description %>">
@@ -49,7 +49,7 @@
     <meta name="msapplication-config" content="browserconfig.xml">
     <link rel="manifest" href="/manifest.json">
 
-    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Cairo:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Dosis:500&text=Vue.js' rel='stylesheet' type='text/css'>
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
