--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -44,9 +44,9 @@
     <%_ if (!page.sponsors) { _%>
       <%- partial('partials/ad-text') %>
     <%_ } _%>
-    Caught a mistake or want to contribute to the documentation?
+    هل وجدت ثغرة في الكود او مهتم بالمساهمة في الوثائق؟
     <a href="https://github.com/vuejs/vuejs.org/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
-      Edit this page on GitHub!
+      قم بتعديل هذه الصفحة على GitHub!
     </a>
   </div>
 </div>
