--- a/themes/vue/layout/partials/conf.ejs
+++ b/themes/vue/layout/partials/conf.ejs
@@ -1,6 +1,6 @@
 <div id="conf-promo">
   <a href="https://conf.vuejs.org">
     <img src="/images/conf.png" alt="vueconf">
-    <p>The first VueConf EU is being held in Wrocław, Poland, June 21-23!</p>
+    <p>اول مؤتمر لڤيو اوروبا (VueConf EU) تم عمله في مدينة ڤروتسواف في بولندا بتاريخ ٢١-٢٣!</p>
   </a>
 </div>
