--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -9,10 +9,10 @@
         <h2>
           <% titles = {
             api: 'API',
-            examples: 'Examples',
-            guide: 'Guide',
-            cookbook: 'Cookbook<sup class="beta">beta</sup>',
-            'style-guide': 'Style Guide<sup class="beta">beta</sup>'
+            examples: 'امثلة',
+            guide: 'دليل الاصدار رقم',
+            cookbook: 'كتاب الامثلة<sup class="beta">تجريبي</sup>',
+            'style-guide': 'دليل الانماط<sup class="beta">تجريبي</sup>'
           } %>
           <%- titles[type] %>
           <% if (['cookbook', 'style-guide'].indexOf(type) === -1) { %>
