--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -3,31 +3,31 @@
     <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
     <% if (type === 'guide') { %>
       <% if (fileName === 'installation') { %>
-        <li><h3>Essentials</h3></li>
+        <li><h3>الاساسيات</h3></li>
       <% } %>
       <% if (fileName === 'components-registration') { %>
-        <li><h3>Components In-Depth</h3></li>
+        <li><h3>المكونات</h3></li>
       <% } %>
       <% if (fileName === 'transitions') { %>
-        <li><h3>Transitions & Animation</h3></li>
+        <li><h3>الانتقالات والانيميشن</h3></li>
       <% } %>
       <% if (fileName === 'mixins') { %>
-        <li><h3>Reusability & Composition</h3></li>
+        <li><h3>اعادة الاستخدام والتكوين</h3></li>
       <% } %>
       <% if (fileName === 'single-file-components') { %>
-        <li><h3>Tooling</h3></li>
+        <li><h3>الادوات</h3></li>
       <% } %>
       <% if (fileName === 'routing') { %>
-        <li><h3>Scaling Up</h3></li>
+        <li><h3>توسيع المشروع</h3></li>
       <% } %>
       <% if (fileName === 'reactivity') { %>
-        <li><h3>Internals</h3></li>
+        <li><h3>ادوات داخلية</h3></li>
       <% } %>
       <% if (fileName === 'migration') { %>
-        <li><h3>Migrating</h3></li>
+        <li><h3>هجرة الاصدارات</h3></li>
       <% } %>
       <% if (fileName === 'comparison') { %>
-        <li><h3>Meta</h3></li>
+        <li><h3>معلومات</h3></li>
       <% } %>
     <% } %>
     <li>
