--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -1,13 +1,13 @@
-<h1>Sponsor Vue.js Development</h1>
+<h1>دعم تطوير Vue.js</h1>
 
 <p>
 Vue.js is an MIT licensed open source project and completely free to use.
 However, the amount of effort needed to maintain and develop new features for the project is not sustainable without proper financial backing. You can support Vue.js development via the following methods:
 </p>
 
-<h2 id="One-time-Donations">One-time Donations</h2>
+<h2 id="One-time-Donations">التبرع لمرة واحدة</h2>
 
-<p>We accept donations through these channels:</p>
+<p>نقوم بقبول التبرعات من خلال الخدمات التالية:</p>
 
 <div id="one-time-donations">
   <a href="https://www.paypal.me/evanyou" target="_blank">
@@ -69,9 +69,9 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
   </li>
 </ul>
 
-<h2>Current Premium Sponsors:</h2>
+<h2>الرعاة الحاليين المميزين:</h2>
 
-<h3>Special Sponsors</h3>
+<h3>الرعاة المميزين</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.special_sponsors) {_%>
@@ -81,7 +81,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>Platinum</h3>
+<h3>الرعاة البلاتينيين</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors) {_%>
@@ -91,7 +91,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>OpenCollective Platinum</h3>
+<h3>رعاة OpenCollective البلاتينيين</h3>
 
 <p class="open-collective-sponsors sponsor-section">
 <%_ for (let i = 0; i < 10; i++) {_%>
@@ -101,7 +101,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>Special Sponsors (China)</h3>
+<h3>رعاة مميزين (الصين)</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors_china) {_%>
@@ -111,7 +111,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>Patreon Gold</h3>
+<h3>الرعاة الذهبيين</h3>
 
 <p class="patreon-sponsors sponsor-section">
 <%_ for (const sponsor of theme.gold_sponsors) {_%>
@@ -121,7 +121,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>OpenCollective Gold</h3>
+<h3>رعاة OpenCollective الذهبيين</h3>
 
 <p class="open-collective-sponsors sponsor-section">
 <%_ for (let i = 0; i < 10; i++) {_%>
@@ -131,7 +131,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>Patreon Silver</h3>
+<h3>الرعاة الفضيين</h3>
 
 <p class="patreon-sponsors sponsor-section">
 <%_ for (const sponsor of theme.silver_sponsors) {_%>
@@ -141,7 +141,7 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 <%_ } _%>
 </p>
 
-<h3>OpenCollective Silver</h3>
+<h3>رعاة OpenCollective الفضيين</h3>
 
 <p class="open-collective-sponsors sponsor-section">
 <%_ for (let i = 0; i < 5; i++) {_%>
@@ -152,9 +152,9 @@ Recurring pledges come with exclusive perks, e.g. having your name listed in the
 </p>
 
 <p>
-If you run a business and are using Vue in a revenue-generating product, it makes business sense to sponsor Vue development: <b>it ensures the project that your product relies on stays healthy and actively maintained.</b> It can also help your exposure in the Vue community and makes it easier to attract Vue developers.
+  اذا كان لديك عمل او شركة تستخدم بها Vue.js في منتج تقوم ببيعه والتربح منه, فلسوف يسكون شيء رائع ان تقوم تطوير بدعم Vue.js: <b>فهذا يمكننا من التأكد من ان مشاريعك ومنتجك يقف على ارض صلبة.</b> كما سوف يساعدك في الانتشار بين مجتمع ڤيو ويجعل من السهل جذب مطورين ڤيو.
 </p>
 
 <p>
-If you are an individual user and have enjoyed the productivity of using Vue, consider donating as a sign of appreciation - like buying me coffee once in a while :)
+  اذا كنت فرد او مستخدم وقد استمتعت بالانتاجية باستخدام ڤيو, سوف يجعلنا سعداء ان قمت بالتبرع للمشروع كنوع من انواع التقدير - كأنك تقوم بدعوتي على قهوة كل فترة :).
 </p>
