--- a/themes/vue/source/css/_team.styl
+++ b/themes/vue/source/css/_team.styl
@@ -36,7 +36,7 @@
       img
         border-radius: 50%
     .profile
-      padding-left: 26px
+      padding-right: 26px
       flex: 1
       h3
         margin: 0
@@ -86,6 +86,8 @@
         text-transform: uppercase
         font-size: .84em
         font-weight: 600
+        float: right;
+        margin: 9px 0 0 20px;
         &::after
           content: ""
           margin-right: 7px
