--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -110,8 +110,8 @@
     font-weight: 600
   blockquote
     margin: 2em 0
-    padding-left: 20px
-    border-left: 4px solid $green
+    padding-right: 20px
+    border-right: 4px solid $green
     p
       font-weight: 600
       margin-left: 0
