--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -4,7 +4,7 @@
     <li><h4>مساعدة</h4></li>
     <li><ul>
       <li><a href="https://forum.vuejs.org/" class="nav-link" target="_blank">منتدى</a></li>
-      <li><a href="https://chat.vuejs.org/" class="nav-link" target="_blank">الرسائل الفورية</a></li>
+      <li><a href="https://chat.vuejs.org/" class="nav-link" target="_blank">الدردشة</a></li>
       <li><a href="https://events.vuejs.org/meetups/" class="nav-link" target="_blank">ملتقيات</a></li>
     </ul></li>
     <li><h4>اﻷدوات</h4></li>
