--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -24,7 +24,7 @@
     <li><h4>اﻷخبار</h4></li>
     <li><ul>
       <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">اﻷخبار اﻷسبوعية</a></li>
-      <li><a href="https://github.com/vuejs/vue/projects/6" class="nav-link" target="_blank">خارطة الطريق</a></li>
+      <li><a href="https://github.com/vuejs/vue/projects/6" class="nav-link" target="_blank">الدليل</a></li>
       <li><a href="https://events.vuejs.org/" class="nav-link" target="_blank">أحداث</a></li>
       <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter</a></li>
       <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">مدونة</a></li>
