Revert "Merge branch 'master' of https://github.com/MohamedHassanWD/ar.vuejs.org"
This reverts commit 787eb3ac69b28fcbd531b7dd88179b7fa8f636a8, reversing
changes made to 32c224a602229ba7a468bff6f89edbdb58aceb40.

--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -15,27 +15,27 @@
         <li><a href="https://vue-loader.vuejs.org" class="nav-link" target="_blank">Vue Loader</a></li>
       </ul>
     </li>
-    <li><h4>المكتبات اﻷساسية</h4></li>
+    <li><h4>المكتبات الاساسية</h4></li>
     <li><ul>
       <li><a href="https://router.vuejs.org/" class="nav-link" target="_blank">Vue Router</a></li>
       <li><a href="https://vuex.vuejs.org/" class="nav-link" target="_blank">Vuex</a></li>
       <li><a href="https://ssr.vuejs.org/" class="nav-link" target="_blank">Vue Server Renderer</a></li>
     </ul></li>
-    <li><h4>اﻷخبار</h4></li>
+    <li><h4>الاخبار</h4></li>
     <li><ul>
-      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">اﻷخبار اﻷسبوعية</a></li>
-      <li><a href="https://github.com/vuejs/vue/projects/6" class="nav-link" target="_blank">الدليل</a></li>
-      <li><a href="https://events.vuejs.org/" class="nav-link" target="_blank">أحداث</a></li>
-      <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter</a></li>
-      <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">مدونة</a></li>
-      <li><a href="https://vuejobs.com/?ref=vuejs" class="nav-link" target="_blank">عروض عمل</a></li>
+      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">الاخبار الاسبوعية</a></li>
+      <li><a href="https://github.com/vuejs/vue/projects/6" class="nav-link" target="_blank">خريطة السير</a></li>
+      <li><a href="https://events.vuejs.org/" class="nav-link" target="_blank">الاحداث والمؤتمرات</a></li>
+      <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">ڤيو على تويتر</a></li>
+      <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">المدونة</a></li>
+      <li><a href="https://vuejobs.com/?ref=vuejs" class="nav-link" target="_blank">الوظائف</a></li>
       <li><a href="https://dev.to/t/vue" class="nav-link" target="_blank">مجتمع المطورين</a></li>
     </ul></li>
-    <li><h4>قوائم الموارد</h4></li>
+    <li><h4>قوائم الموارد والمصادر</h4></li>
     <li><ul>
-      <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">المستودع الرئيس</a></li>
-      <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">Vue Curated</a></li>
-      <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue</a></li>
+      <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">الستودعات الرسمية</a></li>
+      <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">مكتبات خارجية</a></li>
+      <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">قائمة رائعة لڤيو</a></li>
     </ul></li>
   </ul>
 </li>
