--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -19,7 +19,7 @@
     <% } %>
   <% } %>
   <% if (page.title.trim()) { %>
-    <h1><%- page.title %><%- page.type === 'examples' ? ' Example' : '' %></h1>
+    <h1><%- page.type === 'examples' ? 'مثال ' : '' %><%- page.title %></h1>
   <% } %>
   <% if (page.sponsors) { %>
     <%- partial('sponsors-page') %>
